# inspector-gadget

./: astpath.py  inspector_gadget.py  pyproject.toml
test_code/: __init__.py  test_module.py
