[tool.poetry]
name = "inspector-gadget"
version = "0.1.0"
description = ""
authors = ["Ellis Percival <inspector-gadget@failcode.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
